# romea_controllers

./: .gitlab-ci.yml
ackermann_controller/: CHANGELOG.rst  CMakeLists.txt  README.md  ackermann_controller_plugins.xml  package.xml
ackermann_controller/include/ackermann_controller/: ackermann_controller.h  odometry.h
ackermann_controller/scripts/: teleop_ackermann_joy.py
ackermann_controller/src/: ackermann_controller.cpp  odometry.cpp
ackermann_controller/test/: ackermann.h  ackermann_common.launch  ackermann_controller.test  ackermann_radius_param.test  ackermann_test.cpp  ackermann_wrong_config.test  view_ackermann.launch
ackermann_controller/test/config/: ackermann_controllers.yaml  ackermann_wrong_config.yaml
ackermann_controller/test/launch/: ackermann_common.launch  view_ackermann.launch
ackermann_controller/test/src/: ackermann.cpp  ackermann.h  ackermann_test.cpp  ackermann_wrong_config.cpp  test_common.h
ackermann_controller/test/urdf/: ackermann.urdf.xacro  ackermann.xacro  chassis.xacro  steering.xacro  wheel_steered.xacro
four_wheel_steering_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
four_wheel_steering_controller/include/four_wheel_steering_controller/: four_wheel_steering_controller.h  odometry.h  speed_limiter.h  urdf_vehicle_kinematic.h
four_wheel_steering_controller/scripts/: teleop_ackermann_joy.py  teleop_four_wheel_steering_joy.py
four_wheel_steering_controller/src/: four_wheel_steering_controller.cpp  odometry.cpp  speed_limiter.cpp  urdf_vehicle_kinematic.cpp
four_wheel_steering_controller/test/: four_wheel_steering_controller.test  four_wheel_steering_radius_param.test
four_wheel_steering_controller/test/config/: four_wheel_steering_controllers.yaml  four_wheel_steering_wrong_config.yaml
four_wheel_steering_controller/test/launch/: four_wheel_steering_common.launch  view_four_wheel_steering.launch
four_wheel_steering_controller/test/src/: four_wheel_steering.cpp  four_wheel_steering_4ws_cmd_test.cpp  four_wheel_steering_test.cpp  four_wheel_steering_wrong_config.cpp  test_common.h
four_wheel_steering_controller/test/urdf/: four_wheel_steering.urdf.xacro
four_wheel_steering_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
four_wheel_steering_msgs/msg/: FourWheelSteering.msg  FourWheelSteeringDrive.msg  FourWheelSteeringDriveStamped.msg
urdf_vehicle_kinematic/: CHANGELOG.rst  CMakeLists.txt  package.xml
urdf_vehicle_kinematic/include/urdf_vehicle_kinematic/: urdf_vehicle_kinematic.h
urdf_vehicle_kinematic/src/: urdf_vehicle_kinematic.cpp
