<package format="2">
  <name>ackermann_controller</name>
  <version>0.2.2</version>
  <description>Controller for a ackermann mobile base.</description>
  <maintainer email="vincent.rousseau@irstea.fr">Vincent Rousseau</maintainer>
  <author email="vincent.rousseau@irstea.fr">Vincent Rousseau</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>nav_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>tf</depend>
  <depend>urdf_vehicle_kinematic</depend>

  <test_depend>rostest</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend>controller_manager</test_depend>

  <export>
    <controller_interface plugin="${prefix}/ackermann_controller_plugins.xml"/>
  </export>
</package>
