<package format="2">
  <name>four_wheel_steering_controller</name>
  <version>0.2.0</version>
  <description>Controller for a four wheel steering mobile base.</description>
  <maintainer email="vincent.rousseau@irstea.fr">Vincent Rousseau</maintainer>
  <author email="vincent.rousseau@irstea.fr">Vincent Rousseau</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>nav_msgs</depend>
  <depend>four_wheel_steering_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>tf</depend>
  <depend>urdf_vehicle_kinematic</depend>

  <export>
    <controller_interface plugin="${prefix}/four_wheel_steering_controller_plugins.xml"/>
  </export>
</package>
